donate section mobile responsive

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header>
+    <header class="hide">
         <div class="header-container">
             <p class="header-title">Let's Help Those Who Are</p>
             <p class="header-title">More In Need</p>
@@ -32,7 +32,7 @@
                 <button class="btn-primary">Donate Now</button>
             </div>
         </section>
-        <section class="donate-plan">
+        <section class="donate-plan hide">
             <div class="donate-container">
                 <h1 class="donation-title">Our Donate Plan</h1>
                 <p class="donation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque porro voluptates modi. Quibusdam consequuntur impedit mollitia perspiciatis quisquam fugiat?</p>
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section class="donation-container">
+        <section class="donation-container hide">
             <div class="donation-details">
                 <div class="donation-details-container">
                     <h2 class="donation-title">Their lives depend on your donation</h2>
@@ -66,7 +66,7 @@
                 <img src="/images/donation2.jpg" alt="">
             </div>
         </section>
-        <section class="donation-container">
+        <section class="donation-container hide">
             <div class="donation-details">
                 <img src="/images/donation2.jpg" alt="">
                 <div class="donation-details-container">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="my-updates">
+        <section class="my-updates hide">
             <div class="donate-container">
                 <h1 class="donation-title">Get My Updates</h1>
                 <p class="donation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, consequuntur animi ipsam pariatur sed incidunt inventore laboriosam aliquid voluptates vel.</p>    
