another section responsive for smaller devices

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button class="btn-primary">Donate Now</button>
             </div>
         </section>
-        <section class="donate-plan hide">
+        <section class="donate-plan">
             <div class="donate-container">
                 <h1 class="donation-title">Our Donate Plan</h1>
                 <p class="donation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem itaque porro voluptates modi. Quibusdam consequuntur impedit mollitia perspiciatis quisquam fugiat?</p>
