--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
         </section>
-        <section class="donation-container hide">
+        <section class="donation-container">
             <div class="donation-details">
                 <div class="donation-details-container">
                     <h2 class="donation-title">Their lives depend on your donation</h2>
@@ -66,7 +66,7 @@
                 <img src="/images/donation2.jpg" alt="">
             </div>
         </section>
-        <section class="donation-container hide">
+        <section class="donation-container">
             <div class="donation-details">
                 <img src="/images/donation2.jpg" alt="">
                 <div class="donation-details-container">
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </section>
-        <section class="my-updates hide">
+        <section class="my-updates">
             <div class="donate-container">
                 <h1 class="donation-title">Get My Updates</h1>
                 <p class="donation-subtitle">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, consequuntur animi ipsam pariatur sed incidunt inventore laboriosam aliquid voluptates vel.</p>    
