--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header class="hide">
+    <header class="">
         <div class="header-container">
             <p class="header-title">Let's Help Those Who Are</p>
             <p class="header-title">More In Need</p>
